@@ -23,8 +23,7 @@ for file in ${1+"$@"} ; do
      if test ! -d "$pathcomp"; then
         echo "mkdir $pathcomp" 1>&2
         case "$pathcomp" in
-          [abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ]: )
-                ;;               # DOSISH systems
+          [a-zA-Z]: )  ;;               # DOSISH systems
           * )          mkdir "$pathcomp" || errstatus=$? ;;
         esac
      fi
